--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -2,6 +2,10 @@ $main-font: 1.2rem Noto Sans, sans-serif
 $first-bkg-color: #161616
 $second-bkg-color: #272727
 $main-text-color: #fafafa
+html
+  height: 100vh
+  margin: 0
+  overflow: hidden
 body
   font: $main-font
   color: $main-text-color
@@ -10,50 +14,70 @@ body
   max-width: 100vw
   background: url(./assets/images/background.jpg) no-repeat top center
   background-size: cover
-  *
-    text-decoration: none
-    list-style: none
+*
+  text-decoration: none
+  list-style: none
+  box-sizing: border-box
+  color: inherit
 
 header
   position: fixed
-
+  top: 0
 main
   height: 90vh
-  .main-header
-    font-size: 2rem
-    background: url(./assets/images/svg/rings.svg) no-repeat center center
-
+  margin: 0
+.main-header
+  padding-top: 25vh
+  text-align: center
+  font-size: 3rem
+  line-height: 1.3em
+  background: url(./assets/images/svg/rings.svg) no-repeat center bottom
+.categories__wr
+  display: flex
+  justify-content: space-evenly
+  a
+    border: 3px solid $main-text-color
+    border-radius: 5em
+    padding: 1em
+    text-align: center
+    width: 8.5em
 #footer
-  background-color: $second-bkg-color
-  display: flex
-  height: 10vh
-.footer__wr
-  display: flex
-  height: 100%
-.footer-nav
-  width: 60%
-  display: flex
-  justify-content: space-evenly
-  align-items: center
-.nav-home
-  display: block
-  cursor: pointer
-  width: 3rem
-  height: 3rem
-  background: url(./assets/images/svg/home.svg) no-repeat center center
-  background-size: cover
-.nav-settings
-  display: block
-  cursor: pointer
-  width: 2.5rem
-  height: 2.5rem
-  background: url(./assets/images/svg/settings.svg) no-repeat center center
-  background-size: cover
-.footer-about
+  position: fixed
+  bottom: 0
+  padding: 0.5em
   width: 100%
+  background-color: transparent
   display: flex
-  justify-content: space-evenly
+  justify-content: space-between
+  height: 10vh
+.about__wr
+  display: flex
+  column-gap: 0.5em
   align-items: center
+// .footer-nav
+//   width: 60%
+//   display: flex
+//   justify-content: space-evenly
+//   align-items: center
+// .nav-home
+//   display: block
+//   cursor: pointer
+//   width: 3rem
+//   height: 3rem
+//   background: url(./assets/images/svg/home.svg) no-repeat center center
+//   background-size: cover
+// .nav-settings
+//   display: block
+//   cursor: pointer
+//   width: 2.5rem
+//   height: 2.5rem
+//   background: url(./assets/images/svg/settings.svg) no-repeat center center
+//   background-size: cover
+// .footer-about
+//   width: 100%
+//   display: flex
+//   justify-content: space-evenly
+//   align-items: center
 .my-git
   width: 2.5rem
   height: 2.5rem
