--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -1,19 +1,21 @@
+@import styles/settings
+
 $main-font: 1.2rem Noto Sans, sans-serif
-$first-bkg-color: #161616
-$second-bkg-color: #272727
+$bkg-color: #010101
+
 $main-text-color: #fafafa
+
 html
   height: 100vh
   margin: 0
   overflow: hidden
+
 body
   font: $main-font
   color: $main-text-color
   margin: 0
   height: 100vh
   max-width: 100vw
-  background: url(./assets/images/background.jpg) no-repeat top center
-  background-size: cover
 *
   text-decoration: none
   list-style: none
@@ -23,15 +25,40 @@ body
 header
   position: fixed
   top: 0
+  padding: 0.5em
+  width: 100%
+  height: 10vh
+  z-index: 10
+
+.settings-link
+  margin: 0 0 0 auto
+  display: block
+  width: 2.5rem
+  height: 2.5rem
+  background: url(./assets/images/svg/settings.svg) no-repeat center center
+  background-size: cover
+
 main
-  height: 90vh
+  height: 100vh
+  width: 100%
   margin: 0
+  background: $bkg-color
+
+.main-home
+  padding-bottom: 12vh
+  display: flex
+  flex-direction: column
+  justify-content: flex-end
+  height: 100%
+  width: 100%
+  background: url(./assets/images/background.jpg) no-repeat top center / cover
+
 .main-header
-  padding-top: 25vh
   text-align: center
   font-size: 3rem
   line-height: 1.3em
   background: url(./assets/images/svg/rings.svg) no-repeat center bottom
+
 .categories__wr
   display: flex
   justify-content: space-evenly
@@ -41,6 +68,7 @@ main
     padding: 1em
     text-align: center
     width: 8.5em
+
 #footer
   position: fixed
   bottom: 0
@@ -49,41 +77,23 @@ main
   background-color: transparent
   display: flex
   justify-content: space-between
+  align-items: center
   height: 10vh
+  z-index: 500
+
 .about__wr
   display: flex
   column-gap: 0.5em
   align-items: center
-// .footer-nav
-//   width: 60%
-//   display: flex
-//   justify-content: space-evenly
-//   align-items: center
-// .nav-home
-//   display: block
-//   cursor: pointer
-//   width: 3rem
-//   height: 3rem
-//   background: url(./assets/images/svg/home.svg) no-repeat center center
-//   background-size: cover
-// .nav-settings
-//   display: block
-//   cursor: pointer
-//   width: 2.5rem
-//   height: 2.5rem
-//   background: url(./assets/images/svg/settings.svg) no-repeat center center
-//   background-size: cover
-// .footer-about
-//   width: 100%
-//   display: flex
-//   justify-content: space-evenly
-//   align-items: center
+
 .my-git
   width: 2.5rem
   height: 2.5rem
   background: url(./assets/images/svg/github.svg) no-repeat center center
   background-size: cover
+
 .rs-school
-  width: 7rem
+  width: 6rem
   height: 2.5rem
   background: url(./assets/images/svg/rs-school.svg) no-repeat center center
+  background-size: contain
