--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -1,4 +1,5 @@
 @import styles/settings
+@import styles/quiz
 
 $main-font: 1.2rem Noto Sans, sans-serif
 $bkg-color: #010101
@@ -21,6 +22,8 @@ body
   list-style: none
   box-sizing: border-box
   color: inherit
+button 
+  all: unset
 
 header
   position: fixed
