--- a/art-quiz/src/styles/quiz.sass
+++ b/art-quiz/src/styles/quiz.sass
@@ -5,7 +5,24 @@
 .picture-answer
   width: 100px
   height: 200px
-  
+
 .image-answer
+  width: 100%
+  height: 100%
+
+.answer-result
+  position: absolute
+  top: 0
+  left: 0
+  display: flex
+  flex-direction: column
+  width: 90vh
+  background: #161616
+
+.result-picture
+  width: 100px
+  height: 200px
+
+.result-image
   width: 100%
   height: 100%
