--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -1,5 +1,6 @@
 @import styles/settings
 @import styles/quiz
+@import styles/score
 
 $main-font: 1.2rem Noto Sans, sans-serif
 $bkg-color: #010101
@@ -25,7 +26,7 @@ button
   all: unset
 
 header
-  position: fixed
+  position: relative
   top: 0
   padding: 0.5em
   width: 100%
