--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -26,7 +26,7 @@ button
   all: unset
 
 header
-  position: relative
+  position: absolute
   top: 0
   padding: 0.5em
   width: 100%
@@ -45,6 +45,7 @@ main
   height: 100vh
   width: 100%
   margin: 0
+  padding-top: 10vh
   background: $bkg-color
 
 .main-home
