--- a/art-quiz/src/styles/score.sass
+++ b/art-quiz/src/styles/score.sass
@@ -2,6 +2,9 @@
   position: absolute
   top: 0
   left: 0
+  margin: 10vh 0
+  max-width: 100vw
+  max-height: 80vh
   display: flex
   flex-direction: column
   width: 90vh
