--- a/art-quiz/src/styles/settings.sass
+++ b/art-quiz/src/styles/settings.sass
@@ -2,19 +2,15 @@ $button-color: #FFBCA2
 .settings
     height: 100vh
     z-index: 100
-    fieldset
-        border: 0
-        legend
-            text-align: center
-            font-size: 2rem
-.settings-header
+.settings-field-header
     margin: 0
     text-align: center
+    font-size: 2rem
 
-.volume-field
+.settings-field
     display: flex
-    flex-wrap: wrap
-    justify-content: space-between
+    justify-content: space-around
+    padding: 0.5em
     [type='range']
         margin-bottom: 1em
         width: 90%
