feat: add app settings functioning and saving of settings into local storage

--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -22,7 +22,7 @@ body
   list-style: none
   box-sizing: border-box
   color: inherit
-button 
+button
   all: unset
 
 header
@@ -66,12 +66,13 @@ main
 .categories__wr
   display: flex
   justify-content: space-evenly
-  a
-    border: 3px solid $main-text-color
-    border-radius: 5em
-    padding: 1em
-    text-align: center
-    width: 8.5em
+
+.button
+  border: 3px solid $main-text-color
+  border-radius: 5em
+  padding: 1em
+  text-align: center
+  width: 8.5em
 
 #footer
   position: fixed
