--- a/art-quiz/src/styles/settings.sass
+++ b/art-quiz/src/styles/settings.sass
@@ -18,12 +18,11 @@ $button-color: #FFBCA2
         &::-webkit-slider-thumb
             -webkit-appearance: none
             cursor: ew-resize
-.volume-plus
+.volume
     display: block
     width: 2rem
     height: 2rem
     background: url(./assets/images/svg/volume.svg) no-repeat center / contain
 
-.volume-mute
-    @extend .volume-plus
+.volume.mute
     background: url(./assets/images/svg/mute.svg) no-repeat center / contain
