--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -1,10 +1,9 @@
+
+@import styles/variables
 @import styles/settings
 @import styles/quiz
 @import styles/score
-
-$main-font: 1.2rem Noto Sans, sans-serif
-$bkg-color: #010101
-$main-text-color: #fafafa
+@import styles/categories
 
 html
   height: 100vh
@@ -22,31 +21,44 @@ body
   list-style: none
   box-sizing: border-box
   color: inherit
+
 button
   all: unset
 
-header
+::-webkit-scrollbar 
+  width: 0
+
+#header
   position: absolute
   top: 0
   padding: 0.5em
   width: 100%
   height: 10vh
-  z-index: 10
+  display: flex
+  justify-content: center
+  align-items: center
 
 .settings-link
-  margin: 0 0 0 auto
+  position: absolute
+  right: 0.5em
   display: block
   width: 2.5rem
   height: 2.5rem
   background: url(./assets/images/svg/settings.svg) no-repeat center center
   background-size: cover
 
-main
+.page-header
+  margin: 0
+
+#main
   height: 100vh
   width: 100%
   margin: 0
-  padding-top: 10vh
   background: $bkg-color
+  .main-container
+    height: 90vh
+    padding: 0.5em
+    padding-top: 10vh
 
 .main-home
   padding-bottom: 12vh
@@ -68,11 +80,16 @@ main
   justify-content: space-evenly
 
 .button
+  display: flex
+  height: 100%
+  align-items: center
+  justify-content: center
   border: 3px solid $main-text-color
   border-radius: 5em
   padding: 1em
   text-align: center
   width: 8.5em
+  cursor: pointer
 
 #footer
   position: fixed
@@ -84,7 +101,6 @@ main
   justify-content: space-between
   align-items: center
   height: 10vh
-  z-index: 500
 
 .about__wr
   display: flex
