--- a/art-quiz/src/styles/quiz.sass
+++ b/art-quiz/src/styles/quiz.sass
@@ -1,31 +1,71 @@
-.artist-question
-  width: 200px
-  height: 300px
+.quiz-container
+  padding: 1em
+  height: 90vh
+  text-align: center
 
-.picture-answer
-  width: 100px
-  height: 200px
+.quiz-question
+  line-height: 2em
 
-.image-answer
+.quiz-variants
+  margin-top: 0.5em
+  display: grid
+  grid-template: 50% 50% / 50% 50%
+  align-items: center
+  justify-items: center
+  gap: 0.5em
+
+.button.artist-answer
   width: 100%
-  height: 100%
+  padding: 0.5em
+  font-size: 0.8em
+
+.artist-question
+  max-height: 50vh
 
 .answer-result
   position: absolute
   top: 0
   left: 0
-  margin: 10vh 0
-  max-width: 100vw
-  max-height: 80vh
+  padding: 1em
+  width: 100vw
+  max-height: 90vh
   display: flex
   flex-direction: column
-  width: 90vh
-  background: #161616
+  align-items: center
+  background: $form-bkg-color
+
+.result-text
+  text-align: center
+  font-size: 0.8em
+  padding: 0.3em 0
 
 .result-picture
-  width: 100px
-  height: 200px
+  height: 50vh
 
 .result-image
   width: 100%
   height: 100%
+
+.button.result-link
+  margin: 0.5em 0
+  padding: 0.3em
+  line-height: 1em
+
+.result-marker
+  margin-bottom: 0.2em
+  padding: 5px
+  display: block
+  height: 50px
+  text-align: center
+  width: 45px
+  line-height: 30px
+  font-size: 30px
+  color: #b60000
+  border: 2px solid #5f0000
+  border-radius: 50%
+  
+
+.result-marker.right
+  color: #00b600
+  border-color: #005f00
+
