feat: add stylization for mobiles

--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -2,7 +2,6 @@
 @import styles/variables
 @import styles/settings
 @import styles/quiz
-@import styles/score
 @import styles/categories
 
 html
@@ -17,6 +16,7 @@ body
   height: 100vh
   max-width: 100vw
 *
+  cursor: default
   text-decoration: none
   list-style: none
   box-sizing: border-box
@@ -24,6 +24,9 @@ body
 
 button
   all: unset
+
+a
+  cursor: pointer
 
 ::-webkit-scrollbar 
   width: 0
@@ -46,6 +49,9 @@ button
   height: 2.5rem
   background: url(./assets/images/svg/settings.svg) no-repeat center center
   background-size: cover
+  transition: 1s
+  &:hover
+    transform: rotate(270deg)
 
 .page-header
   margin: 0
@@ -90,6 +96,9 @@ button
   text-align: center
   width: 8.5em
   cursor: pointer
+  &:hover
+    color: $button-hover
+    border-color: $button-hover
 
 #footer
   position: fixed
@@ -118,3 +127,10 @@ button
   height: 2.5rem
   background: url(./assets/images/svg/rs-school.svg) no-repeat center center
   background-size: contain
+
+.couple-buttons
+  display: flex
+  column-gap: 0.5em
+
+.link-back:hover
+  color: $button-hover
