--- a/art-quiz/src/styles/variables.sass
+++ b/art-quiz/src/styles/variables.sass
@@ -1,5 +1,9 @@
 $main-font: 1.2rem Noto Sans, sans-serif
 $bkg-color: #010101
 $main-text-color: #d8d8d8
-$button-color: #FFBCA2
+$button-hover: #FFBCA2
 $form-bkg-color: #161616
+$green-border: #005f00
+$green: #00b600
+$red-border: #5f0000
+$red: #b60000
