--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -134,3 +134,20 @@ a
 
 .link-back:hover
   color: $button-hover
+
+body
+  position: relative
+
+#hider
+  position: absolute
+  top: 0
+  width: 100%
+  height: 90vh
+  background: #010101
+  opacity: 0
+  z-index: -1
+  transition: 0.5s cubic-bezier(1, 0, 0, 1)
+
+#hider.show
+  opacity: 1
+  z-index: 1000
