--- a/art-quiz/src/styles/categories.sass
+++ b/art-quiz/src/styles/categories.sass
@@ -25,8 +25,13 @@
   background-color: #d8d8d817
   border-color: #d8d8d817
 
-.category-link:hover, .category-score-link:hover
+.category-link:hover, .category-score-link.done:hover
+  cursor: pointer
   color: $button-hover
+
+.category-score-link:hover
+  cursor: default
+  color: inherit
 
 .score-container
   position: absolute
@@ -64,10 +69,11 @@
 .score-image
   height: 100%
   width: 100%
-  filter: grayscale(0)
+  filter: grayscale(100)
+  cursor: pointer
 
 .score-image.done
-  filter: grayscale(100)
+  filter: grayscale(0)
 
 .score-item-info
   position: absolute
@@ -90,3 +96,6 @@
   span
     margin: 0.5em 0.1em
     text-align: center
+  
+.button.score-close
+  padding: 0.5em
