--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -142,7 +142,7 @@ body
   position: absolute
   top: 0
   width: 100%
-  height: 90vh
+  height: 100%
   background: #010101
   opacity: 0
   z-index: -1
