--- a/art-quiz/src/index.sass
+++ b/art-quiz/src/index.sass
@@ -12,6 +12,7 @@ html
 body
   font: $main-font
   color: $main-text-color
+  background-color: $bkg-color
   margin: 0
   height: 100vh
   max-width: 100vw
@@ -101,7 +102,7 @@ a
     border-color: $button-hover
 
 #footer
-  position: fixed
+  position: absolute
   bottom: 0
   padding: 0.5em
   width: 100%
@@ -151,3 +152,17 @@ body
 #hider.show
   opacity: 1
   z-index: 1000
+
+#wrapper
+  width: 100%
+  position: relative
+  overflow: hidden
+
+@media screen and (min-width: 768px)
+  #wrapper
+    max-width: 768px
+    margin: 0 auto
+
+@media screen and (min-width: 1600px)
+  html
+    font-size: 1.5rem
