--- a/art-quiz/src/styles/quiz.sass
+++ b/art-quiz/src/styles/quiz.sass
@@ -12,6 +12,7 @@
   display: grid
   grid-template: 50% 50% / 50% 50%
   align-items: center
+  justify-items: center
   gap: 0.5em
 
 .button.artist-answer
@@ -27,7 +28,7 @@
   top: 0
   left: 0
   padding: 1em
-  width: 100vw
+  width: 100%
   max-height: 90vh
   display: flex
   flex-direction: column
@@ -101,10 +102,11 @@
   font-size: 2rem
 
 .picture-variants
-  max-height: 80vh
+  max-height: 90%
 
 .image-answer
-  width: calc( 100% - 1em )
+  max-width: calc( 100% - 0.25em )
+  max-height: calc( 100% - 0.25em )
   border: 3px solid $main-text-color
   &:hover
     cursor: pointer
@@ -113,9 +115,10 @@
 .dots-container
   width: 100%
   display: flex
-  justify-content: space-evenly
+  justify-content: center
 
 .dot
+  margin: 0.3em
   border: 0.5rem solid $main-text-color
   border-radius: 50%
 
