--- a/art-quiz/src/styles/settings.sass
+++ b/art-quiz/src/styles/settings.sass
@@ -5,6 +5,7 @@
     align-items: center
     [type='range']
         width: 90%
+        max-width: 25em
         height: 3px
         &::-webkit-slider-thumb
             -webkit-appearance: none
